--- a/_posts/1512/2015-12-21-post-0.md
+++ b/_posts/1512/2015-12-21-post-0.md
@@ -6,7 +6,8 @@ tags: font
 description: 前端排版
 ---
 
-###20151221 第0期 
+###20151221 第0期  
+
 - [骨骼动画原理与前端实现浅谈](http://web.jobbole.com/84359/)  
 骨骼动画原理,前端一些动画的实现的方式,主要思想其实就是分解,然后相对运动,附有[demo](http://codepen.io/taobaofed/pen/xwozdd)
 
@@ -25,3 +26,6 @@ description: 前端排版
 
 - [中文字体排版,两端对齐的方法](http://demo.doyoe.com/css3/justify/)
 web开发的过程中,本身中文字体就是一个比较难搞的事情,这么优美的字体,在web中却很难优雅地做到. 这个是最基本的两端对齐,有兴趣的也可以研究一下中文字体排版.  
+
+
+the end  
