--- a/_posts/1512/2015-12-21-post-0.md
+++ b/_posts/1512/2015-12-21-post-0.md
@@ -28,9 +28,9 @@ description: 前端排版
 - [微信调试方法](http://www.weixin.com/thread-7016-1-1.html)  
 微信的兴起,但是微信页面开发太坑了,尤其是调试,上面给出了一种调试方法,但是稍微有点麻烦,毕竟手机页面现在还没有很方便的方法.
   
-  
+
 - [中文字体排版,两端对齐的方法](http://demo.doyoe.com/css3/justify/)
 web开发的过程中,本身中文字体就是一个比较难搞的事情,这么优美的字体,在web中却很难优雅地做到. 这个是最基本的两端对齐,有兴趣的也可以研究一下中文字体排版.  
   
 
-the end  
+the end.  
